--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
   line-height: 20px;
   margin-right: auto;
   margin-left: auto;
+  background-color: #ffffff;
 }
 
 .header {
@@ -29,7 +30,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* Adicione propriedades flexíveis aqui */
 }
 
 .nav__logo {
@@ -38,7 +38,6 @@
 }
 
 .nav__links {
-  /* Redefinir estilos de lista padrão aqui */
   display: flex;
   align-items: center;
   margin: 8px 0 0;
@@ -51,6 +50,9 @@
   color: #000000;
   text-decoration: none;
   font-weight: bold;
+}
+.nav__link:hover {
+  color: #1f69c9;
 }
 
 .header__title {
@@ -89,6 +91,9 @@
   color: #2f80ed;
   text-decoration: none;
 }
+.header__link:hover {
+  color: #1f69c9;
+}
 
 .header__address {
   margin: 0;
@@ -96,7 +101,7 @@
 }
 
 .events {
-  padding: 100px 0 120px 80px;
+  padding: 100px 0 0 80px;
   display: flex;
   align-items: start;
   justify-content: space-between;
@@ -164,6 +169,9 @@
 .events__more {
   color: #2f80ed;
   text-decoration: none;
+}
+.events__more:hover {
+  color: #1f69c9;
 }
 
 .events__cover {
@@ -334,13 +342,11 @@
   margin: 100px 0 0;
   display: flex;
   justify-content: center;
-  /* Adicione estilos */
 }
 
 .step {
   flex-basis: 220px;
   row-gap: 40px;
-  /* Adicione estilos */
 }
 
 .step__title {
@@ -367,6 +373,9 @@
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  gap: 120px;
 }
 
 .about__title {
@@ -376,6 +385,7 @@
   font-weight: 500;
   z-index: 1;
   max-width: 154px;
+  position: relative;
 }
 
 .about__content {
@@ -383,10 +393,14 @@
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
 .about__paragraph {
+  margin: 0px;
+  z-index: 1;
 }
 
 .about__circle {
@@ -397,35 +411,60 @@
   position: absolute;
   top: -121px;
   left: -91px;
+  z-index: 0;
 }
 
 .footer {
   box-sizing: border-box;
+  background-color: #1f1f1f;
+  color: #fff;
 }
 
 .footer__columns {
+  display: flex;
+  justify-content: space-between;
+  padding: 60px 80px;
 }
 
+.footer__column {
+  display: flex;
+}
 .footer__column_content_hours {
+  row-gap: 80px;
+  margin: 60px 80px;
 }
 
 .footer__column_content_social {
+  row-gap: 80px;
+  margin: 60px 80px;
+}
+.footer__column_logo {
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__logo {
+  width: 57px;
+  height: 80px;
 }
 
 .footer__list {
-  /* O código abaixo remove os estilos do navegador padrão para listas */
   list-style-type: none;
   padding: 0;
   margin: 0;
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .footer__list-item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
 }
 
 .footer__column-heading {
+  margin-bottom: 20px;
 }
 
 .footer__column-link {
@@ -435,8 +474,15 @@
   text-decoration: none;
 }
 
+.footer__column-link:hover {
+  color: #c1c1c1;
+}
+
 .footer__social-icon {
+  width: 16px;
+  height: 16px;
 }
 
 .footer__copyright {
+  margin-top: 100px;
 }
